@@ -1,5 +1,5 @@
 
-use Test::More tests => 130;
+use Test::More tests => 131;
 use Data::Dumper;
 $Data::Dumper::Indent = 1;
 
@@ -899,3 +899,10 @@ TODO:
     is( ( $match ? 1 : 0 ) , 1, 'object matches' );
 }
 
+{
+    my $rule = Pugs::Compiler::Token->compile( 'x <at(1)>' );
+    my $match = $rule->match( "xy" );
+    #print "Source: ", do{use Data::Dumper; Dumper($rule->{perl5})};
+    #print "Match: ", $match->perl;
+    is( "$match", "x", 'ident' );
+}
